<resources>
    <string name="app_name">App Compra y Venta</string>

    <string name="default_web_client_id">167343956735-0cc04rcju8ukts42e9pst9tc30du2sja.apps.googleusercontent.com</string>

    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Chats">Chats</string>
    <string name="Item_Vender">Vender</string>
    <string name="Item_Mis_Anuncios">Mis Anuncios</string>
    <string name="Item_Cuenta">Cuenta</string>

    <string name="TituloRL">Titulo</string>

    <string name="Ingresar_email">Ingresar con email</string>
    <string name="Ingresar_google">Ingresar con google</string>

    <string name="Txt_login">Login de usuario</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Password</string>
    <string name="Btn_ingresar">Ingresar</string>
    <string name="Txt_no_cuenta">¿No tienes una cuenta?</string>
    <string name="Txt_registrarse">REGISTRARME</string>

    <string name="Txt_registro">Registro de usuario</string>
    <string name="Et_r_password">Repetir contraseña</string>
    <string name="Btn_registrar">Registrar</string>


    <!-- Perfil de usuario -->
    <string name="Txt_perfil">Perfil de usuario</string>
    <string name="Txt_informacion">Infomación: </string>
    <string name="Txt_nombres">Nombres: </string>
    <string name="Tv_nombres">Nombres completos</string>
    <string name="Txt_email">Email:</string>">
    <string name="Tv_email">email@dominio.com</string>
    <string name="Txt_nacimiento">Fecha de nac: </string>
    <string name="Tv_nacimiento">DD/MM/AAAA</string>
    <string name="Txt_miembro">Miembro desde: </string>
    <string name="Tv_miembro">DD/MM/AAAA</string>
    <string name="Txt_telefono">Teléfono: </string>
    <string name="Tv_telefono">0123456789</string>
    <string name="Txt_estado_cuenta">Estado de cuenta: </string>
    <string name="Tv_estado_cuenta">No verificado</string>

    <string name="TxtOpciones">Opciones</string>
    <string name="Btn_editar_perfil">Editar perfil</string>
    <string name="Btn_Cerrar_Sesion">Cerrar sesión</string>

    <!--editar perfil-->
    <string name="Txt_editar_perfil">Editar perfil</string>
    <string name="Et_nombres">Nombres Completos</string>
    <string name="Et_fecha_nac">Fecha de nac.</string>
    <string name="Cod_tef">+00</string>
    <string name="Et_telefono">Teléfono</string>
    <string name="Btn_actualizar">Actualizar</string>

    <!--    icono del usuario en chat-->
    <string name="item_uid">UID</string>
    <string name="item_nombre">Nobre</string>
    <string name="item_email">Email</string>
    <string name="tv_sin_Usuario">No hay mas usuarios</string>

    <!--crear anuncio-->
    <string name="Et_marca">Marca</string>
    <string name="Categoria">Categoría</string>
    <string name="Condicion">Condición</string>
    <string name="Locacion">Locación</string>
    <string name="Et_precio">Precio</string>
    <string name="Et_titulo">Título</string>
    <string name="Et_descripcion">Descripción</string>
    <string name="Btn_crear_anuncio">Crear anuncio</string>


</resources>